--- a/Worshop2/workshop2.ipynb
+++ b/Worshop2/workshop2.ipynb
@@ -33,9 +33,8 @@
     "iris_data['Species_encoded'] = encoder.fit_transform(iris_data['Species'])\n",
     "\n",
     "# Sélectionner les caractéristiques à utiliser pour l'entraînement, en excluant la première colonne (Id)\n",
-    "X = iris_data.drop(['Id', 'Species', 'Species_encoded'], axis=1)\n",
+    "X = iris_data.drop(['Id', 'Species'], axis=1)\n",
     "\n",
-    "# Sélectionner la colonne cible correctement nommée\n",
     "# Sélectionner la colonne cible correctement nommée\n",
     "y = iris_data['Species']\n",
     "\n",
